--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
       <table border = 1>
          <thead>
             <td>Name</td>
-            <td>Address>/td<
+            <td>Address</td>
          </thead>
          
          {% for row in rows %}
