--- a/student.html
+++ b/student.html
@@ -3,7 +3,7 @@
       <form action = "{{ url_for('addrec') }}" method = "POST">
          <h3>Student Information</h3>
          Name<br>
-         <input type = "text" name = "nm" /></br>
+         <input type = "text" name = "nm" /><br>
          
          Address<br>
          <textarea name = "add" ></textarea><br>
